# skills

./: .gitignore
audio-extractor/: SKILL.md
audio-extractor/scripts/: extract_audio.sh
audio-spliter/: SKILL.md
audio-spliter/scripts/: batch_segment.sh  segment_audio.sh  split_audio.sh
lesson-summarize/: SKILL.md
qwen3-asr-realtime/: SKILL.md  pyproject.toml
qwen3-asr-realtime/scripts/: transcribe.py
qwen3-asr-realtime/transcription/: __init__.py  transcribe.py
upload-to-s3like/: SKILL.md  pyproject.toml
upload-to-s3like/scripts/: upload.py
upload-to-s3like/upload_to_s3like/: __init__.py  cli.py  core.py
