[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcription-skill"
version = "0.1.0"
description = "Transcribe audio/video files using DashScope qwen3-asr-flash-realtime"
requires-python = ">=3.10"
dependencies = [
    "dashscope>=1.25.6",
    "pydub",
]

[project.scripts]
transcribe = "transcription.transcribe:main"
